--- a/css/styles.css
+++ b/css/styles.css
@@ -101,11 +101,13 @@ li {
   margin-right: 50px;
 }
 
-.nav-header li:last-child,
-.main-nav li:last-child {
+.nav-header-title:last-child,
+.main-nav-item:last-child {
   margin-right: 0;
 }
-
+.main-nav-item{
+  margin-right: 30px;
+}
 .nav-header .nav-studio:hover {
   color: var(--accent-color);
 }
@@ -217,6 +219,31 @@ li {
 
 .peculiarities-title {
   flex-basis: 270px;
+
+
+}
+.peculiarities-title::before{
+  content: "";
+  display: flex;
+  height: 120px;
+  margin-bottom: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--team-color);
+  border-radius: 4px;
+}
+.peculiarities-title:nth-child(1)::before{
+  background-image: url("../images/antenna.svg");
+}
+.peculiarities-title:nth-child(2)::before{
+  background-image: url("../images/clock.svg");
+}
+.peculiarities-title:nth-child(3)::before{
+  background-image: url("../images/diagram.svg");
+}
+.peculiarities-title:nth-child(4)::before{
+  background-image: url("../images/astronaut.svg");
 }
 
 .title-text {
