--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
   --fon-color: #2f303a;
   --team-color: #f5f4fa;
   --border-color: #ececec;
+  --icon-color: #afb1b8;
+  --border-shadow-color: #eeeeee;
 }
 
 body {
@@ -72,6 +74,10 @@ li {
   margin-left: auto;
 }
 
+.header-icon {
+  margin-right: 10px;
+}
+
 .main-nav {
   display: flex;
 }
@@ -102,18 +108,22 @@ li {
 }
 
 .nav-header-title:last-child,
-.main-nav-item:last-child {
+.main-nav-item:last-child,
+.footer-icon-item:last-child{
   margin-right: 0;
 }
-.main-nav-item{
+.main-nav-item {
   margin-right: 30px;
 }
 .nav-header .nav-studio:hover {
   color: var(--accent-color);
+  fill: var(--accent-color);
 }
-
 .nav-header .nav-studio:focus {
   color: var(--accent-color);
+}
+.nav-header .nav-studio:focus .header-icon{
+  fill: var(--accent-color);
 }
 
 .current {
@@ -122,16 +132,19 @@ li {
 
 .contacts {
   color: var(--text-color);
+  fill: var(--text-color);
   display: flex;
+  align-items: center;
 }
 
 .hero {
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
   height: 600px;
   max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/hero.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -139,7 +152,6 @@ li {
   display: block;
   text-align: center;
   padding: 200px 0;
-
 }
 
 .buttons:hover,
@@ -201,8 +213,6 @@ li {
   padding-bottom: 94px;
 }
 
-
-
 .peculiarities {
   font-weight: 700;
   font-size: 14px;
@@ -221,11 +231,9 @@ li {
 
 .peculiarities-title {
   flex-basis: 270px;
-
-
 }
-.peculiarities-title::before{
-  content: "";
+.peculiarities-title::before {
+  content: '';
   display: flex;
   height: 120px;
   margin-bottom: 30px;
@@ -235,19 +243,18 @@ li {
 
   background-color: var(--team-color);
   border-radius: 4px;
-
 }
-.peculiarities-title:nth-child(1)::before{
-  background-image: url("../images/antenna.svg");
+.peculiarities-title:nth-child(1)::before {
+  background-image: url('../images/antenna.svg');
 }
-.peculiarities-title:nth-child(2)::before{
-  background-image: url("../images/clock.svg");
+.peculiarities-title:nth-child(2)::before {
+  background-image: url('../images/clock.svg');
 }
-.peculiarities-title:nth-child(3)::before{
-  background-image: url("../images/diagram.svg");
+.peculiarities-title:nth-child(3)::before {
+  background-image: url('../images/diagram.svg');
 }
-.peculiarities-title:nth-child(4)::before{
-  background-image: url("../images/astronaut.svg");
+.peculiarities-title:nth-child(4)::before {
+  background-image: url('../images/astronaut.svg');
 }
 
 .title-text {
@@ -289,6 +296,32 @@ li {
   letter-spacing: 0.03em;
   color: var(--text-color);
   margin-top: 10px;
+  margin-bottom: 16px;
+}
+.team-icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.team-icon {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--icon-color);
+}
+
+.team-icon:hover,
+.team-icon:focus {
+  background-color: var(--accent-color);
+}
+
+.team-icon:hover .team-icon-svg,
+.team-icon:focus .team-icon-svg {
+  fill: var(--light-color);
 }
 
 .contact-footer {
@@ -308,6 +341,7 @@ li {
 .footer-box {
   background-color: var(--fon-color);
   padding: 60px 0;
+
 }
 
 .contact-footer:hover,
@@ -361,6 +395,9 @@ li {
 .buttons-portfolio:focus {
   background-color: var(--accent-color);
   color: var(--light-color);
+  box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
+    0 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .buttons-portfolio {
@@ -394,10 +431,38 @@ li {
   justify-content: center;
 }
 
+.clients {
+  display: flex;
+  gap: 30px;
+}
+
+.clients-icon {
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  fill: var(--icon-color);
+  margin-top: 50px;
+  display: flex;
+}
+
+.clients-icon:hover,
+.clients-icon:focus {
+  border-color: var(--accent-color);
+}
+
+.clients-icon:hover .clients-icon-svg,
+.clients-icon:focus .clients-icon-svg {
+  fill: var(--accent-color);
+}
+
 /*Футер*/
 .addresses {
   font-style: normal;
   margin-top: 20px;
+  display: flex;
 }
 
 .addresses-footer-mail {
@@ -413,6 +478,51 @@ li {
   color: var(--light-color);
 }
 
+.footer-flex {
+  display: flex;
+
+}
+.footer-box-icon{
+  margin-left: 70px;
+}
+
+.footer-box-flex{
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+.footer-icon {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--light-color);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-icon-text{
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--light-color);
+
+}
+
+.footer-icon:hover,
+.footer-icon:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-icon:hover .footer-icon-svg,
+.footer-icon:focus .footer-icon-svg {
+  fill: var(--light-color);
+}
+.footer-icon-item {
+  margin-right: 10px;
+  margin-top: 20px;
+}
 img {
   display: block;
   max-width: 100%;
@@ -427,7 +537,7 @@ img {
 
 .portfolio-box-text {
   padding: 20px 24px;
-  border: 1px solid #eeeeee;
+
   border-top: 0;
 }
 
@@ -436,6 +546,13 @@ img {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1px solid var(--border-shadow-color);
+}
+
+.box-cart:hover,
+.box-cart:focus {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .box-cart:nth-child(3n) {
